--- a/presentacion/Properties/Resources.resx
+++ b/presentacion/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Search" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Search.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="upload-design-layer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\upload-design-layer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
